<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UserResgster</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">" 用 户 注 册 "</string>
    <string name="user">用户名:</string>
    <string name="pass">密 码:</string>
    <string name="girl">女</string>
    <string name="boy">男</string>

</resources>
